# LockInLauncher

./: .gitignore  LICENSE  appmanager.py  config.json  lockin.py  main.py  pyproject.toml  readme.md  state.py
src/: appearance.py  appmanager.py  config.py  main.py  tasktracker.py  timer.py  websitemanager.py
