[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LockInLauncher"
version = "0.1.0"
description = "A productivity automation tool that eliminates distractions and instantly configures a focused workspace, helping users stay locked into deep work."
authors = [
    { name = "Johnny Dunal" }
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "keyboard>=0.13.5"
]

[project.scripts]
lockin = "src.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]